--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
   },
   "homepage": "https://github.com/PRmars86/Hacker.io#readme",
   "dependencies": {
+    "axios": "^1.4.0",
     "next": "^13.4.3",
     "nprogress": "^0.2.0",
     "react": "^18.2.0",
