--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
   "homepage": "https://github.com/PRmars86/Hacker.io#readme",
   "dependencies": {
     "axios": "^1.4.0",
+    "jsonwebtoken": "^9.0.0",
     "next": "^13.4.3",
     "nprogress": "^0.2.0",
     "react": "^18.2.0",
