--- a/package.json
+++ b/package.json
@@ -27,7 +27,8 @@
     "next": "^13.4.3",
     "nprogress": "^0.2.0",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "react-image-file-resizer": "^0.4.8"
   },
   "devDependencies": {
     "@types/node": "20.2.1",
