--- a/package.json
+++ b/package.json
@@ -28,7 +28,8 @@
     "nprogress": "^0.2.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-image-file-resizer": "^0.4.8"
+    "react-image-file-resizer": "^0.4.8",
+    "react-quill": "^2.0.0"
   },
   "devDependencies": {
     "@types/node": "20.2.1",
