--- a/package.json
+++ b/package.json
@@ -24,12 +24,14 @@
     "axios": "^1.4.0",
     "js-cookie": "^3.0.5",
     "jsonwebtoken": "^9.0.0",
+    "moment": "^2.29.4",
     "next": "^13.4.3",
     "nprogress": "^0.2.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-image-file-resizer": "^0.4.8",
-    "react-quill": "^2.0.0"
+    "react-quill": "^2.0.0",
+    "react-render-html": "^0.6.0"
   },
   "devDependencies": {
     "@types/node": "20.2.1",
